# hw2-N-queens

./: hw2-N-queens.cabal
app/: Main.hs
src/: MyLib.hs
